crates/core-executor/src/tests/sql/logical_analyzer/casting/snapshots/timestamp/query_to_timestamp_column_already_timestamp.snap
---
source: crates/core-executor/src/tests/sql/logical_analyzer/casting/timestamp.rs
description: "\"SELECT col::TIMESTAMP as t FROM (SELECT '2024-04-03T12:12:10'::TIMESTAMP AS col)\""
---
Ok(
    [
        "+---------------------+",
        "| t                   |",
        "+---------------------+",
        "| 2024-04-03T12:12:10 |",
        "+---------------------+",
    ],
)
